<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TVSIServiceTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bt_connect">Connect</string>
    <string name="bt_disconnect">Disconnect</string>
    <string name="bt_startScan">Start Scan</string>
    <string name="bt_stopScan">Stop Scan</string>
    <string name="bt_channel">Channel</string>
    <string name="bt_program">Program</string>
    <string name="bt_chUp">CH+</string>
    <string name="bt_chDown">CH-</string>
    <string name="bt_prgm_monitor">Program Monitor</string>
    <string name="tv_chkbox">Dump Detail Option</string>
    <string name="cb_channel">Channel</string>
    <string name="cb_program">Program</string>
    <string name="tv_version">Version</string>
    <string name="tv_status">Status</string>
    <string name="tv_channel_info">Channel Info.</string>
    <string name="tv_program_info">Program Info.</string>
    <string name="tv_cur_channel_info">Current Channel Info.</string>
    <string name="tv_prgm_monitor_info">Program Monitor Info.</string>
    <string name="tv_dump">Dump first Item</string>
    <string name="tv_chNum">ChNum</string>
    <string name="tv_chNumList">ChNumList</string>
    <string name="tv_stIndex">Start Index</string>
    <string name="tv_rqCount">Request Count</string>
    <string name="tv_stTime">Start Time(yyMMddhhmm)</string>
    <string name="tv_edTime">End Time(yyMMddhhmm)</string>
    <string name="tv_scanmode">ScanMode</string>
    <string name="sp_scanmode">Choose a ScanMode</string>
    <string name="tv_freq_unit">MHz</string>
    <string name="tv_symbolrate_unit">Ksps</string>
    <string name="tv_bandwidth">Bandwidth</string>
    <string name="sp_bandwidth">Choose a Bandwidth</string>
    <string name="tv_modulation">Modulation</string>
    <string name="sp_modulation">Choose a Modulation</string>
    <string name="tv_tunerid">TunerId</string>
    <string name="sp_tunerid">Choose a TunerId</string>
    <string name="tv_rqName">Request Name</string>
    <string name="cb_descFlag">DescFlag</string>
    <string name="tv_networkid">NetworkId</string>
    <string name="cb_ch">CH</string>
    <string name="cb_prgm">Prgm</string>
    <string name="title_activity_main">MainActivity</string>

</resources>