<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TVSIServiceTest" >

    <LinearLayout
        android:id="@+id/controlLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/connectToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textOff="@string/bt_connect"
            android:textOn="@string/bt_disconnect" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/scanmodeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/array_scanmode"
                android:minWidth="100dp"
                android:prompt="@string/sp_scanmode"
                android:textSize="@dimen/text_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_scanmode"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/freqEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="freq"
                android:inputType="number"
                android:minWidth="100dp"
                android:text="47"
                android:textSize="@dimen/text_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_freq_unit"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/symbolrateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="symbolrate"
                android:inputType="number"
                android:maxLength="5"
                android:minWidth="100dp"
                android:text="6875"
                android:textSize="@dimen/text_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_symbolrate_unit"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/bandwidthSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/array_badnwidth"
                android:minWidth="100dp"
                android:prompt="@string/sp_bandwidth"
                android:textSize="@dimen/text_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_bandwidth"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/modulationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/array_modulation"
                android:minWidth="100dp"
                android:prompt="@string/sp_modulation"
                android:textSize="@dimen/text_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_modulation"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/tuneridSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/array_tunerid"
                android:minWidth="100dp"
                android:prompt="@string/sp_tunerid"
                android:textSize="@dimen/text_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tunerid"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/networkidEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="network"
                android:inputType="number"
                android:maxLength="5"
                android:minWidth="100dp"
                android:text="88"
                android:textSize="@dimen/text_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_networkid"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/startToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textOff="@string/bt_startScan"
            android:textOn="@string/bt_stopScan" />

        <Button
            android:id="@+id/channelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/bt_channel"
            android:textSize="@dimen/text_default" />

        <Button
            android:id="@+id/programButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/bt_program"
            android:textSize="@dimen/text_default" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/channelUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="@string/bt_chUp"
                android:textSize="@dimen/text_default" />

            <Button
                android:id="@+id/channelDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="@string/bt_chDown"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_ch"
                android:textSize="@dimen/text_default" />

            <CheckBox
                android:id="@+id/cb_program"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_prgm"
                android:textSize="@dimen/text_default" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/controlLayout"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_version"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_status"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvChannelInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_channel_info"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvProgramInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_program_info"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="65" />

        <TextView
            android:id="@+id/tvCurChannelInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cur_channel_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</RelativeLayout>