<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_chNum01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_chNum"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_chNum01"
            android:layout_width="120dip"
            android:layout_height="35dip"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:text="0" />

        <TextView
            android:id="@+id/tv_chNumList01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_chNumList"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_chNumList01"
            android:layout_width="120dip"
            android:layout_height="35dip"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:text="1|3|6|7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_stIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stIndex"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_stIndex"
            android:layout_width="120dip"
            android:layout_height="35dip"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:text="0" />

        <TextView
            android:id="@+id/tv_rqCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_rqCount"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_rqCount"
            android:layout_width="120dip"
            android:layout_height="35dip"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_rqName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_rqName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_rqName"
            android:layout_width="120dip"
            android:layout_height="35dip"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:text="News" />

        <CheckBox
            android:id="@+id/cb_descFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_descFlag"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_stTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stTime"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_stTime"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:maxLength="10"
            android:text="1401062100" />

        <TextView
            android:id="@+id/tv_edTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_edTime"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_edTime"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:maxLength="10"
            android:text="1401062300" />
    </LinearLayout>

</LinearLayout>